--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 coverage/assets/*
 coverage/index.html
 coverage/.resultset*
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
