--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,11 @@ attr_encrypted:
 
 google_maps_embed:
   key: <%= ENV['GOOGLE_MAPS_EMBED_API_KEY'] %>
+
+smtp_config:
+  user_name: <%= ENV['SMTP_USER_NAME'] %>
+  password: <%= ENV['SMTP_PASSWORD'] %>
+  address: <%= ENV['SMTP_ADDRESS'] %>
+  domain: <%= ENV['SMTP_DOMAIN'] %>
+  port: <%= ENV['SMTP_PORT'] %>
+  authentication: <%= ENV['SMTP_AUTH'] %>
