--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,7 +13,7 @@ smtp_config:
   address: <%= ENV['SMTP_ADDRESS'] %>
   domain: <%= ENV['SMTP_DOMAIN'] %>
   port: <%= ENV['SMTP_PORT'].to_i %>
-  authentication: <%= ENV['SMTP_AUTH'].to_sym %>
+  authentication: <%= ENV['SMTP_AUTH'] %>
 
 default_url:
   host: <%= ENV['URL_HOST'] %>
