--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 services:
   db:
     image: postgres
@@ -8,7 +8,7 @@ services:
     build: .
     command: bash -c "bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/dashous
+      - .:/dashous:consistent
     ports:
       - "3000:3000"
     depends_on:
@@ -16,3 +16,4 @@ services:
       - redis
     environment:
       REDIS_URL: "redis://redis:6379/12"
+
